--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Howard O'Neil">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Design UI Course</title>
+    <title>CLPUB project</title>
 </head>
 
 <body style="padding: 0px; margin: 0px;">
